--- a/components/src/components/Services/AllServices.astro
+++ b/components/src/components/Services/AllServices.astro
@@ -1,7 +1,7 @@
 ---
 import LocationSmall from '../location/locationSmall.astro';
 
-import CuadroServicio from './CuadroServicio.astro'
+import ServiceChart from './ServiceChart.astro'
 ---
 
 <div class="cuadro-servicio">
@@ -11,6 +11,6 @@ import CuadroServicio from './CuadroServicio.astro'
     <LocationSmall />
     
     <div class="flex-container-servicio">
-        <CuadroServicio> 
+        <ServiceChart> 
     </div>
 </div>
