--- a/components/src/components/Services/Carousel.astro
+++ b/components/src/components/Services/Carousel.astro
@@ -35,7 +35,7 @@ const products = [
     <div class="product-container">
       {products.map((item) =>
         
-        <div class="carrusell-product">
+        <div class="Carousel-product">
           <div class="product-image">              
               <img src={item.src} class="product-thumb" alt="Benefit 1">        
           </div>
@@ -83,7 +83,7 @@ productContainers.forEach((item, i) => {
   justify-content: center;
   }
 
-  .carrusell-product {
+  .Carousel-product {
     display: flex;
     flex: 0 0 auto;
     margin-right: 0px;
