--- a/components/src/components/Services/Coments.astro
+++ b/components/src/components/Services/Coments.astro
@@ -1,7 +1,7 @@
 ---
 ---
 <div class="comments-section">
-    <h2>Comentarios</h2>
+    <h2>Coments</h2>
     <div class="comment">
       <div class="user">Usuario 1</div>
       <div class="message">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
@@ -10,7 +10,7 @@
       <div class="user">Usuario 2</div>
       <div class="message">Pellentesque ac ex vel neque facilisis congue.</div>
     </div>
-    <!-- Agregar más comentarios aquí -->
+    <!-- Agregar más Coments aquí -->
 </div>
   
 <style>
