--- a/components/src/components/Services/ServiceChart.astro
+++ b/components/src/components/Services/ServiceChart.astro
@@ -1,5 +1,5 @@
 ---
-import EstrellasCalificacion from "./EstrellasCalificacion.astro";
+import CalificationStars from "./CalificationStars.astro";
 const products = [
   {
     name: "jardineria fernando",
@@ -57,7 +57,7 @@ const products = [
             <div class="title">
               <div class="text">{item.name}</div>
               <div class="stars">
-              <EstrellasCalificacion  calificacion={"4.7"} />
+              <CalificationStars  calificacion={"4.7"} />
              </div>
             </div>
             
