--- a/components/src/components/base/CirculBtnNext.astro
+++ b/components/src/components/base/CirculBtnNext.astro
@@ -2,7 +2,7 @@
 const srcNext = Astro.props
 ---
 
-<a id="circleBtn-next-link" href?={srcNext}>
+<a id="circleBtn-next-link" href={srcNext}>
     <button class="circle-button-next"></button>
 </a>
 
