--- a/components/src/components/forms/CreateProfileProvider.astro
+++ b/components/src/components/forms/CreateProfileProvider.astro
@@ -1,6 +1,6 @@
 ---
 import CirculBtnNext from "../base/CirculBtnNext.astro";
-const srcNext = "../pages/provider/perfil.astro";
+const srcNext = "../pages/provider/profile.astro";
 
 ---
 
