--- a/components/src/components/provider/PromotedPost.astro
+++ b/components/src/components/provider/PromotedPost.astro
@@ -11,6 +11,9 @@ const anuncios = [
 <div class="container-anuncios">
     <div class="titulo-anuncios-crear-boton">
         <h2>Anuncios publicados:</h2>
+        <!-- <a href="/ad">
+            <button>Crear anuncio</button>
+        </a> -->
         <button class="crear-anuncio-button">Crear anuncio</button>
     </div>
     {anuncios.map((item) =>
