--- a/components/src/components/base/Navigation.astro
+++ b/components/src/components/base/Navigation.astro
@@ -3,9 +3,9 @@ const pageTitle: string = "LABOROSO";
 ---
     <div class="nav-links">
         <a href="/">Inicio</a>
-        <a href="/servicios">Servicios</a>
+        <a href="/services">Servicios</a>
         <a href="/signup">Ser proveedor</a>
-        <a href="/provider/perfil">Cuenta y seguridad</a>
+        <a href="/provider/profile">Cuenta y seguridad</a>
     </div>
 
 <style>
