--- a/components/src/pages/signup.astro
+++ b/components/src/pages/signup.astro
@@ -1,9 +1,9 @@
 ---
-import BarraNavegacion from '../components/BarraNavegacion.astro';
+import NavBar from '../components/NavBar.astro';
 import Tiles from '../components/market/Tiles.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
-import TodosLosServicios from '../components/Servicios/TodosLosServicios.astro';
-import Filtro from '../components/market/filtro.astro'
+import AllServices from '../components/Services/AllServices.astro';
+import Filter from '../components/market/Filter.astro'
 import Login from '../components/forms/login.astro';
 import RegisterProvider from '../components/forms/registerProvider.astro';
 const pageTitle = "Trabajos Que Ayudan";
